CLIENT-849: text-align fix

--- a/src/modules/ui/directives/smartTable/smart-table.less
+++ b/src/modules/ui/directives/smartTable/smart-table.less
@@ -158,6 +158,12 @@
         .cell-header {
           display: none;
         }
+
+        &:first-child {
+          .cell {
+            justify-content: flex-start;
+          }
+        }
       }
     }
 
